wrap attribution section with footer element

--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
     </div>
   </main>
 
-  <div class="attribution">
-    <b>Challenge</b> by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.<br>
-    <b>Created by</b> <a href="https://github.com/peter-abah">Peter Abah</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      <b>Challenge</b> by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.<br>
+      <b>Created by</b> <a href="https://github.com/peter-abah">Peter Abah</a>.
+    </div>
+  </footer>
 </body>
 
 </html>
